clusters/talos-robbinsdale/apps/hello/app/service-hello-world.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello.robbinsdale.rajsingh.info
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
