clusters/talos-robbinsdale/apps/hello/app/httproute-hello-ts.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello 
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: envoy-gateway-system
  hostnames:
    - "hello.ts.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hello-world
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
